# GARF

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  create_juglet_hdf5.py  create_tray_hdf5.py  generate_viz.py  preprocess_scan_to_anchor_frame.py  pyproject.toml  rebuild_juglet_pipeline.py  train.py
.progress/: 2026-03-31__garf.md  2026-04-03__garf.md  2026-04-04__garf.md  2026-04-05__garf.md  2026-04-15__garf.md  2026-04-17__garf.md  2026-05-28__garf.md  2026-05-29__garf.md  2026-07-10__garf.md  2026-07-13__garf.md  2026-07-18__garf.md  2026-07-19__garf.md  2026-07-20__garf.md
docs/: laptop-agent-setup.md  local-claude-hpc.md
scripts/: bone_results_summary.py  bone_results_summary.txt  build_control_pairs_hdf5.py  build_exp4c_glb_viewer.py  build_exp4c_selfcontained_viewer.py  build_juglet_pairs_hdf5.py  build_juglet_pseudo_labels.py  build_juglet_selfsup_hdf5.py  build_single_sample_subset.py  contact_band_relief.py  create_bone_visual_confirmation.py  create_bone_visual_final.py  create_bone_visual_fixed.py  create_corrected_bone_visual.py  create_simple_visual_confirmation.py  derive_pfpp_adjacency.py  domain_bridge.py  exp14_dewear_sufficiency.py  finetune_frac_seg.py  fracseg_introspection.py  fracture_contact_analysis.py  fracture_mesh_ops.py  fracture_sharpness_analysis.py  garf_matched_diagnostic.py  geom_stats_compare.py  juglet_pseudo_gt_bound.py  merge_worn_encoder.py  monitor_fracture_tests.sh  no_gt_probes.py  pair_reference_chamfer.py  pfpp_layout_probes.py  pfpp_pair_chamfer.py  pfpp_pose_delta.py  pfpp_seam_continuity.py  pfpp_stability.py  run_juglet_deploy.sh  summarize_benchmark_metrics.py  summarize_bridge_metrics.py  summarize_control_pairs.py  summarize_erosion_bridge.py  (+5 more)
slurm/: bone_test_euler.slurm  bone_test_fixed.slurm  bone_test_original.slurm  build_pytorch3d.slurm  debug_bone_srun.slurm  diagnose_garf_matched_9pc.slurm  eval_bone_viz.slurm  eval_complex.slurm  eval_juglet.slurm  (+33 more)
(+23 files in other folders)
